--- a/tensorboard/plugins/graph/tf_graph_loader/tf-graph-loader.html
+++ b/tensorboard/plugins/graph/tf_graph_loader/tf-graph-loader.html
@@ -75,6 +75,10 @@ Polymer({
       readOnly: true, // This property produces data.
       notify: true
     },
+    _requestManager: {
+      type: Object,
+      value: () => new tf_backend.RequestManager(),
+    },
   },
   observers: [
     '_selectedDatasetChanged(selectedDataset, datasets, overridingHierarchyParams)',
@@ -128,7 +132,13 @@ Polymer({
     });
     this._setOutHierarchyParams(hierarchyParams);
     var dataTracker = tf.graph.util.getSubtaskTracker(tracker, 30, 'Data');
-    tf.graph.parser.fetchAndParseGraphData(path, pbTxtFile, dataTracker)
+    var whitelist = [];
+    const whitelist_url = tf_backend.getRouter().pluginRoute('graphs', '/whitelist');
+    this._requestManager.request(whitelist_url)
+    .then(function(response) {
+      whitelist = response.whitelist;
+      return tf.graph.parser.fetchAndParseGraphData(path, pbTxtFile, dataTracker);
+    })
     .then(function(graph) {
       if (!graph.node) {
         throw 'The graph is empty. Make sure that the graph is passed to the ' +
@@ -165,7 +175,7 @@ Polymer({
     })
     .then(function(graph) {
       // Populate compatibile field of OpNode based on whitelist
-      tf.graph.op.checkOpsForCompatibility(graph);
+      tf.graph.op.checkOpsForCompatibility(graph, whitelist);
 
       this._setOutGraph(graph);
       var hierarchyTracker = tf.graph.util.getSubtaskTracker(tracker, 50,
