--- a/tensorboard/plugins/graph/tf_graph_loader/tf-graph-loader.html
+++ b/tensorboard/plugins/graph/tf_graph_loader/tf-graph-loader.html
@@ -43,6 +43,7 @@ Polymer({
     datasets: Array,
     selectedDataset: Number,
     selectedFile: Object,
+    whitelist: Array,
     /**
      * If this optional object is provided, graph logic will override
      * the HierarchyParams it uses to build the graph with properties within
@@ -132,13 +133,14 @@ Polymer({
     });
     this._setOutHierarchyParams(hierarchyParams);
     var dataTracker = tf.graph.util.getSubtaskTracker(tracker, 30, 'Data');
-    var whitelist = [];
-    const whitelist_url = tf_backend.getRouter().pluginRoute('graphs', '/whitelist');
+    var whitelist_url = tf_backend.addParams(
+      tf_backend.getRouter().pluginRoute('graphs', '/whitelist'),
+      {run: this.datasets[this.selectedDataset].name});
     this._requestManager.request(whitelist_url)
-    .then(function(response) {
-      whitelist = response.whitelist;
+    .then(function(whitelist) {
+      this.whitelist = whitelist;
       return tf.graph.parser.fetchAndParseGraphData(path, pbTxtFile, dataTracker);
-    })
+    }.bind(this))
     .then(function(graph) {
       if (!graph.node) {
         throw 'The graph is empty. Make sure that the graph is passed to the ' +
@@ -175,7 +177,7 @@ Polymer({
     })
     .then(function(graph) {
       // Populate compatibile field of OpNode based on whitelist
-      tf.graph.op.checkOpsForCompatibility(graph, whitelist);
+      tf.graph.op.checkOpsForCompatibility(graph, this.whitelist);
 
       this._setOutGraph(graph);
       var hierarchyTracker = tf.graph.util.getSubtaskTracker(tracker, 50,
